--- a/views/result.ejs
+++ b/views/result.ejs
@@ -91,7 +91,7 @@
         <h1>Your Electric Tweak</h1>
         <p>Prompt: <strong><%= prompt %></strong></p>
         <img src="<%= imageUrl %>" alt="Generated Image">
-        <a href="/">Generate Another Tweak</a>
+        <a href="/">Generate A New Dream</a>
     </div>
 </body>
 </html>
